# swagger.yaml
@@ -29,7 +29,7 @@ paths:
                 linkedIn: https://www.linkedin.com/in/b-ty/
                 company: Boba.inc
                 email: biba_boba1@gmail.com
-                password: boba1231
+                password: boba123
       responses:
         '201':
           description: Successful response
@@ -47,7 +47,7 @@ paths:
               type: object
               example:
                 email: biba_boba1@gmail.com
-                password: boba1231
+                password: boba123
       responses:
         '202':
           description: Successful response
@@ -96,7 +96,25 @@ paths:
             schema:
               type: object
               example:
-                email: khomynt97@gmail.com
+                email: biba_boba1@gmail.com
+      responses:
+        '200':
+          description: Successful response
+          content:
+            application/json: {}
+  /api/v1/auth/reset-password:
+    post:
+      tags:
+        - auth
+      summary: Reset Password (privat)
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              example:
+                password: boba123
+                confirmPassword: boba123
       responses:
         '200':
           description: Successful response
